<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maptest3</string>

    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="action_search">Search</string>
    <string name="action_location_searching">Location</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="title_activity_add_new_park">AddNewPark</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_testtab">testTab</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="sTen">Tên bãi đỗ xe</string>
    <string name="sDC">Địa chỉ</string>
    <string name="sDT">Điện Thoại </string>
    <string name="sTD">Tọa độ </string>
    <string name="sSC">Số chỗ</string>
    <string name="sSN">Số nhà</string>
    <string name="title_activity_bookmark_parking">BookmarkParking</string>

</resources>
