<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sTen" />

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvDiachi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sDC" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/tvDienthoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sDT" />

        <EditText
            android:id="@+id/etDienthoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvSonha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sSN" />

        <EditText
            android:id="@+id/etSonha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvToado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sTD" />

        <EditText
            android:id="@+id/etToado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvSocho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sSC" />

        <EditText
            android:id="@+id/etTongso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <FrameLayout
            android:id="@+id/showmap"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:onClick="true" >
        </FrameLayout>

        <Button
            android:id="@+id/them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thêm vị trí" />
    </LinearLayout>

</ScrollView>